# hatch-build-isolated-binary

./: LICENSE.txt  README.md  pyproject.toml
src/hatch_build_isolated_binary/: __main__.py  build_binary.py
