[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-build-isolated-binary"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "David Hobbs", email = "1676348+hobbsd@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/hobbsd/hatch-build-isolated-binary#readme"
Issues = "https://github.com/hobbsd/hatch-build-isolated-binary/issues"
Source = "https://github.com/hobbsd/hatch-build-isolated-binary"

[project.scripts]
build-binary = "hatch_build_isolated_binary.build_binary:main"

[tool.hatch.version]
path = "src/hatch_build_isolated_binary/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hatch_build_isolated_binary tests}"
